--- a/research/05_model_evaluation.ipynb
+++ b/research/05_model_evaluation.ipynb
@@ -64,14 +64,14 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "os.environ[\"MLFLOW_TRACKING_URI\"]=\"https://dagshub.com/entbappy/End-to-end-Machine-Learning-Project-with-MLflow.mlflow\"\n",
-    "os.environ[\"MLFLOW_TRACKING_USERNAME\"]=\"entbappy\"\n",
-    "os.environ[\"MLFLOW_TRACKING_PASSWORD\"]=\"6824692c47a369aa6f9eac5b10041d5c8edbcef0\""
+    "os.environ[\"MLFLOW_TRACKING_URI\"]=\"https://dagshub.com/Revanth-Reddy-Pingala/AskmeOffers_Project.mlflow\"\n",
+    "os.environ[\"MLFLOW_TRACKING_USERNAME\"]=\"Revanth-Reddy-Pingala\"\n",
+    "os.environ[\"MLFLOW_TRACKING_PASSWORD\"]=\"5418262685c0516abb2944ca1f4a463b4a6115b7\""
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 12,
+   "execution_count": 16,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -92,7 +92,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 13,
+   "execution_count": 17,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -102,7 +102,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 14,
+   "execution_count": 18,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -122,7 +122,7 @@
     "    \n",
     "    def get_model_evaluation_config(self) -> ModelEvaluationConfig:\n",
     "        config = self.config.model_evaluation\n",
-    "        params = self.params.ElasticNet\n",
+    "        params = self.params.CatBoostClassifier\n",
     "        schema =  self.schema.TARGET_COLUMN\n",
     "\n",
     "        create_directories([config.root_dir])\n",
@@ -134,7 +134,7 @@
     "            all_params=params,\n",
     "            metric_file_name = config.metric_file_name,\n",
     "            target_column = schema.name,\n",
-    "            mlflow_uri=\"https://dagshub.com/entbappy/End-to-end-Machine-Learning-Project-with-MLflow.mlflow\",\n",
+    "            mlflow_uri=\"https://dagshub.com/Revanth-Reddy-Pingala/AskmeOffers_Project.mlflow\",\n",
     "           \n",
     "        )\n",
     "\n",
@@ -143,13 +143,13 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 15,
+   "execution_count": 19,
    "metadata": {},
    "outputs": [],
    "source": [
     "import os\n",
     "import pandas as pd\n",
-    "from sklearn.metrics import mean_squared_error, mean_absolute_error, r2_score\n",
+    "from sklearn.metrics import accuracy_score, precision_score, recall_score, f1_score, roc_auc_score\n",
     "from urllib.parse import urlparse\n",
     "import mlflow\n",
     "import mlflow.sklearn\n",
@@ -159,7 +159,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 16,
+   "execution_count": 20,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -169,10 +169,12 @@
     "\n",
     "    \n",
     "    def eval_metrics(self,actual, pred):\n",
-    "        rmse = np.sqrt(mean_squared_error(actual, pred))\n",
-    "        mae = mean_absolute_error(actual, pred)\n",
-    "        r2 = r2_score(actual, pred)\n",
-    "        return rmse, mae, r2\n",
+    "        accuracy = accuracy_score(actual, pred)\n",
+    "        precision = precision_score(actual, pred)\n",
+    "        recall = recall_score(actual, pred)\n",
+    "        f1 = f1_score(actual, pred)\n",
+    "        roc_auc = roc_auc_score(actual, pred)\n",
+    "        return accuracy, precision, recall, f1, roc_auc\n",
     "    \n",
     "\n",
     "\n",
@@ -193,17 +195,19 @@
     "\n",
     "            predicted_qualities = model.predict(test_x)\n",
     "\n",
-    "            (rmse, mae, r2) = self.eval_metrics(test_y, predicted_qualities)\n",
+    "            (accuracy, precision, recall, f1, roc_auc) = self.eval_metrics(test_y, predicted_qualities)\n",
     "            \n",
     "            # Saving metrics as local\n",
-    "            scores = {\"rmse\": rmse, \"mae\": mae, \"r2\": r2}\n",
+    "            scores = {\"accuracy\": accuracy, \"precision\": precision, \"recall\": recall, \"f1\": f1, \"roc_auc\": roc_auc}\n",
     "            save_json(path=Path(self.config.metric_file_name), data=scores)\n",
     "\n",
     "            mlflow.log_params(self.config.all_params)\n",
     "\n",
-    "            mlflow.log_metric(\"rmse\", rmse)\n",
-    "            mlflow.log_metric(\"r2\", r2)\n",
-    "            mlflow.log_metric(\"mae\", mae)\n",
+    "            mlflow.log_metric(\"accuracy\", accuracy)\n",
+    "            mlflow.log_metric(\"precision\", precision)\n",
+    "            mlflow.log_metric(\"recall\", recall)\n",
+    "            mlflow.log_metric(\"f1\", f1)\n",
+    "            mlflow.log_metric(\"roc_auc\", roc_auc)\n",
     "\n",
     "\n",
     "            # Model registry does not work with file store\n",
@@ -213,7 +217,7 @@
     "                # There are other ways to use the Model Registry, which depends on the use case,\n",
     "                # please refer to the doc for more information:\n",
     "                # https://mlflow.org/docs/latest/model-registry.html#api-workflow\n",
-    "                mlflow.sklearn.log_model(model, \"model\", registered_model_name=\"ElasticnetModel\")\n",
+    "                mlflow.sklearn.log_model(model, \"model\", registered_model_name=\"CatBoostClassifier\")\n",
     "            else:\n",
     "                mlflow.sklearn.log_model(model, \"model\")\n",
     "\n",
@@ -222,28 +226,29 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 17,
+   "execution_count": 21,
    "metadata": {},
    "outputs": [
     {
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "[2023-07-11 20:31:23,825: INFO: common: yaml file: config\\config.yaml loaded successfully]\n",
-      "[2023-07-11 20:31:23,827: INFO: common: yaml file: params.yaml loaded successfully]\n",
-      "[2023-07-11 20:31:23,830: INFO: common: yaml file: schema.yaml loaded successfully]\n",
-      "[2023-07-11 20:31:23,832: INFO: common: created directory at: artifacts]\n",
-      "[2023-07-11 20:31:23,833: INFO: common: created directory at: artifacts/model_evaluation]\n",
-      "[2023-07-11 20:31:24,272: INFO: common: json file saved at: artifacts\\model_evaluation\\metrics.json]\n"
+      "[2024-05-11 03:49:23,065: INFO: common: yaml file: config/config.yaml loaded successfully]\n",
+      "[2024-05-11 03:49:23,067: INFO: common: yaml file: params.yaml loaded successfully]\n",
+      "[2024-05-11 03:49:23,069: INFO: common: yaml file: schema.yaml loaded successfully]\n",
+      "[2024-05-11 03:49:23,070: INFO: common: created directory at: artifacts]\n",
+      "[2024-05-11 03:49:23,071: INFO: common: created directory at: artifacts/model_evaluation]\n",
+      "[2024-05-11 03:49:23,122: WARNING: connectionpool: Retrying (Retry(total=4, connect=5, read=4, redirect=5, status=5)) after connection broken by 'ProtocolError('Connection aborted.', RemoteDisconnected('Remote end closed connection without response'))': /Revanth-Reddy-Pingala/AskmeOffers_Project.mlflow/api/2.0/mlflow/runs/create]\n",
+      "[2024-05-11 03:49:23,703: INFO: common: json file saved at: artifacts/model_evaluation/metrics.json]\n"
      ]
     },
     {
      "name": "stderr",
      "output_type": "stream",
      "text": [
-      "Registered model 'ElasticnetModel' already exists. Creating a new version of this model...\n",
-      "2023/07/11 20:31:32 INFO mlflow.tracking._model_registry.client: Waiting up to 300 seconds for model version to finish creation.                     Model name: ElasticnetModel, version 2\n",
-      "Created version '2' of model 'ElasticnetModel'.\n"
+      "Registered model 'CatBoostClassifier' already exists. Creating a new version of this model...\n",
+      "2024/05/11 03:49:33 INFO mlflow.tracking._model_registry.client: Waiting up to 300 seconds for model version to finish creation.                     Model name: CatBoostClassifier, version 2\n",
+      "Created version '2' of model 'CatBoostClassifier'.\n"
      ]
     }
    ],
